--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./logo512.png">
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" url="./barbell.png" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Workout Routies Todo App"
+      content="app created to add your daily workout routies. like a WakeUp Call towards your goal. Workout Routies Todo App"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -28,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>GYM App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
